Added database connection properties / Changed database from Postgres to MySQL / Correction of the minimum and maximum value annotation for the 'size' attribute / Functionality to create a manga / Migration refactoring

--- a/manga_be/src/main/resources/application.properties
+++ b/manga_be/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=manga
+
+spring.datasource.url=jdbc:mysql://localhost:3306/reader
+spring.datasource.username=andrew
+spring.datasource.password=gomes
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
