--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,14 @@
 services:
-  postgres:
-    image: 'postgres:latest'
-    environment:
-      - 'POSTGRES_DB=reader'
-      - 'POSTGRES_PASSWORD=gomes'
-      - 'POSTGRES_USER=andrew'
-    ports:
-      - '5432'
-  redis:
-    image: 'redis:latest'
-    ports:
-      - '6379'
+    mysql:
+      image: 'mysql:latest'
+      environment:
+        - 'MYSQL_DATABASE=reader'
+        - 'MYSQL_PASSWORD=gomes'
+        - 'MYSQL_ROOT_PASSWORD=gomes'
+        - 'MYSQL_USER=andrew'
+      ports:
+        - '3306:3306'
+    redis:
+      image: 'redis:latest'
+      ports:
+        - '6379'
