subindo container docker para desenvolvimento java

--- a/manga_be/src/main/resources/application.properties
+++ b/manga_be/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=gomes
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.devtools.restart.enabled=true
