--- a/manga_fe/.devcontainer/devcontainer.json
+++ b/manga_fe/.devcontainer/devcontainer.json
@@ -1,17 +1,21 @@
 {
     "name": "Node.js Development",
     "dockerFile": "../Dockerfile",
-    "settings": {
-        "terminal.integrated.defaultProfile.linux": "bash"
+    "customizations": {
+        "vscode": {
+            "settings": {
+                "terminal.integrated.defaultProfile.linux": "bash"
+            },
+            "extensions": [
+                "ms-vscode.node-debug2",
+                "dbaeumer.vscode-eslint",
+                "vue.volar",
+                "vitest.explorer",
+                "ms-azuretools.vscode-docker",
+                "esbenp.prettier-vscode"
+            ]
+        }
     },
-    "extensions": [
-        "ms-vscode.node-debug2",
-        "dbaeumer.vscode-eslint",
-        "vue.volar",
-        "vitest.explorer",
-        "ms-azuretools.vscode-docker",
-        "esbenp.prettier-vscode"
-    ],
     "forwardPorts": [
         3000
     ],
