trocando o mysql pelo postgres

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,12 @@
 services:
-    mysql:
-      image: 'mysql:latest'
+    postgres:
+      image: 'postgres:latest'
       environment:
-        - 'MYSQL_DATABASE=reader'
-        - 'MYSQL_PASSWORD=gomes'
-        - 'MYSQL_ROOT_PASSWORD=gomes'
-        - 'MYSQL_USER=andrew'
+        - 'POSTGRES_DB=reader'
+        - 'POSTGRES_USER=andrew'
+        - 'POSTGRES_PASSWORD=gomes'
       ports:
-        - '3306:3306'
+        - "5432:5432"
     redis:
       image: 'redis:latest'
       ports:
