--- a/manga_be/src/main/resources/application.properties
+++ b/manga_be/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=manga
 
-spring.datasource.url=jdbc:mysql://localhost:3306/reader
+spring.datasource.url=jdbc:postgresql://localhost:5432/reader
 spring.datasource.username=andrew
 spring.datasource.password=gomes
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.devtools.restart.enabled=true
