autenticação de usuário, quase finalizada

--- a/manga_be/src/main/resources/application.properties
+++ b/manga_be/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+secret.key=4Z^XrroxR@dWxqf$mTTKwW$!@#qGr4P
+my.password=mypassword
