--- a/manga_be/src/main/resources/application.properties
+++ b/manga_be/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+reader.user.password=mypassword
