--- a/manga_fe/package.json
+++ b/manga_fe/package.json
@@ -17,6 +17,7 @@
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
+    "maska": "^3.1.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
