--- a/manga_be/docker-compose.yml
+++ b/manga_be/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "8080:8080"
       - "5005:5005"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/reader
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/reader
       SPRING_DATASOURCE_USERNAME: andrew
       SPRING_DATASOURCE_PASSWORD: gomes
       SPRING_PROFILES_ACTIVE: dev
