--- a/manga_be/docker-compose.yml
+++ b/manga_be/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - ./src:/app/src
       - ~/.m2:/root/.m2
+      - /home/andrewgo/uploads:/app/uploads
     depends_on:
       - postgres
     command: ./mvnw spring-boot:run
