--- a/manga_be/pom.xml
+++ b/manga_be/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.27</version>
+		</dependency>
 	</dependencies>
 
 	<build>
