ajustando nome do container; quantidade de memória que o container pode usar; pegando prefixo para nome de capítulo

--- a/manga_be/docker-compose.yml
+++ b/manga_be/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - /home/andrewgo/Documentos/Capitulos_salvos:/app/uploads:rw,Z
     depends_on:
       - postgres
+    container_name: manga-back
     command: ./mvnw spring-boot:run
 
 volumes:
