--- a/manga_be/Dockerfile
+++ b/manga_be/Dockerfile
@@ -14,7 +14,7 @@ WORKDIR /app
 
 COPY --from=build /app/target/manga-0.0.1-SNAPSHOT.jar app.jar
 
-ENTRYPOINT ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:5005", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Xms2048m", "-Xmx6000m", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:5005", "-jar", "app.jar"]
 
 EXPOSE 8080
 
