--- a/manga_be/src/main/resources/application.yml
+++ b/manga_be/src/main/resources/application.yml
@@ -2,3 +2,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  servlet:
+    multipart:
+      max-file-size: 500MB
+      max-request-size: 500MB
