fix: corrigindo o compose do rabbit

--- a/manga_be/docker-compose.yml
+++ b/manga_be/docker-compose.yml
@@ -14,12 +14,14 @@ services:
       - postgres_data:/var/lib/postgres
 
   rabbitmq:
-    image: 'rabbitmq:latest'
+    image: rabbitmq:3-management
+    container_name: rabbit_manga
     environment:
-      - 'RABBITMQ_DEFAULT_PASS=reader'
-      - 'RABBITMQ_DEFAULT_USER=andrew'
+      - RABBITMQ_DEFAULT_USER=andrew
+      - RABBITMQ_DEFAULT_PASS=reader
     ports:
-      - '5672:5672'
+      - "5672:5672"
+      - "15672:15672"
 
 volumes:
   postgres_data:
